# TIL-25-CV

./: .gitignore  Dockerfile  README.md  dev.py  pyproject.toml  submit.sh  test.py
.devcontainer/: devcontainer.json
.devcontainer/hooks/: postStart.sh
Collab_training/: Train.ipynb
src/: app.py  cv_manager.py  cv_managerOG.py
til-25-cv/: Dockerfile  README.md  dev.py  pyproject.toml  submit.sh  test.py
til-25-cv/.devcontainer/hooks/: postCreate.sh
til-25-cv/src/: __init__.py  app.py  cv_manager.py
